--- a/Toy1.html
+++ b/Toy1.html
@@ -49,7 +49,11 @@ $(function() {
 
 function handleFiles(files) {
  var file = files[0];
- alert(file.name);
+ var reader = new FileReader();
+ reader.onload = function(ev) {
+  run(reader.result);
+ }
+ reader.readAsArrayBuffer(file);
 }
 
 function run(data) {
